# Travel-Journal

./: .gitignore
backend/: Cargo.toml
backend/migrations/: 20251228070446_create_locations_table.sql  20251229003920_add_visited_at.sql
backend/src/: db.rs  location.rs  main.rs
backend/src/auth/: jwt.rs
backend/src/handlers/: upload.rs
backend/src/middleware/: auth.rs
backend/src/models/: location.rs
backend/src/routes/: auth.rs  location.rs
backend/src/services/: location.rs
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.js
frontend/src/components/: LocationForm.jsx  Login.css  Login.jsx  Map.css  Map.jsx
frontend/src/services/: api.js
