[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.8", features = ["http2", "macros", "ws"] }
serde = { version = "1.0.228", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio-native-tls", "postgres", "uuid", "chrono"] }
tokio = { version = "1.48.0", features = ["full"] }
uuid = { version = "1.19.0", features = ["serde","v4"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15" 
jsonwebtoken = "9"
tower-http = { version = "0.5", features = ["cors"] }